--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,8 +19,8 @@
       <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
       <link rel="manifest" href="/site.webmanifest">
       <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#fb155b">
-      <meta name="apple-mobile-web-app-title" content="Geidh.uk">
-      <meta name="application-name" content="Geidh.uk">
+      <meta name="apple-mobile-web-app-title" content="Tachartasan.info">
+      <meta name="application-name" content="Tachartasan.info">
       <meta name="msapplication-TileColor" content="#fb135b">
       <meta name="msapplication-TileImage" content="/mstile-144x144.png">
       <meta name="theme-color" content="#fb135b">
@@ -57,50 +57,14 @@
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Naidheachdan
+          Roinnean-seòrsa
           </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item" href="{{ site.baseurl }}/roinn-seorsa/alba">Alba</a>
-            <a class="dropdown-item" href="{{ site.baseurl }}/roinn-seorsa/an-rioghachd-aonaichte">An Rìoghachd Aonaichte</a>
-            <a class="dropdown-item" href="{{ site.baseurl }}/roinn-seorsa/an-roinn-eorpa">An Roinn-eòrpa</a>
-            <a class="dropdown-item" href="{{ site.baseurl }}/roinn-seorsa/creideamh">Creideamh</a>
-            <a class="dropdown-item" href="{{ site.baseurl }}/roinn-seorsa/cultar">Cùltar</a>
-            <a class="dropdown-item" href="{{ site.baseurl }}/roinn-seorsa/eirinn">Èirinn</a>
-            <a class="dropdown-item" href="{{ site.baseurl }}/roinn-seorsa/feisean-proise">Fèisean-pròise</a>
             <a class="dropdown-item" href="{{ site.baseurl }}/roinn-seorsa/foghlam">Foghlam</a>
-            <a class="dropdown-item" href="{{ site.baseurl }}/roinn-seorsa/gaidhlig">Gàidhlig</a>
-            <a class="dropdown-item" href="{{ site.baseurl }}/roinn-seorsa/gniomhachas">Gnìomhachas</a>
-            <a class="dropdown-item" href="{{ site.baseurl }}/roinn-seorsa/lagh">Lagh</a>
-            <a class="dropdown-item" href="{{ site.baseurl }}/roinn-seorsa/poilitigs">Poilitigs</a>
-            <a class="dropdown-item" href="{{ site.baseurl }}/roinn-seorsa/slainte">Slàinte</a>
-            <a class="dropdown-item" href="{{ site.baseurl }}/roinn-seorsa/teicneolas">Teicneòlas</a>
             </div>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{{ site.baseurl }}/briathrachas-lcdt">Briathrachas LCDTQ+</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Comhairle
-          </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item" href="{{ site.baseurl }}/comhairle/">Clàr-amais</a>
-            <a class="dropdown-item" href="{{ site.baseurl }}/comhairle/a-tighinn-a-mach">A' Tighinn A-mach</a>
-            <a class="dropdown-item" href="{{ site.baseurl }}/comhairle/burraidheachd">Buarraidheachd</a>
-            <a class="dropdown-item" href="{{ site.baseurl }}/comhairle/coirichean-reachdas">Còirichean & Reachdas</a>
-            <a class="dropdown-item" href="{{ site.baseurl }}/comhairle/daimhean-feise">Dàimhean & Fèise</a>
-            <a class="dropdown-item" href="{{ site.baseurl }}/comhairle/eucoirean-graineil">Eucoirean Gràineil</a>
-            <a class="dropdown-item" href="{{ site.baseurl }}/comhairle/parantachd">Pàrantachd</a>
-            <a class="dropdown-item" href="{{ site.baseurl }}/comhairle/slainte">Slàinte</a>
-            </div>
-          <li class="nav-item">
-            <a class="nav-link" href="{{ site.baseurl }}/roinn-seorsa/tachartasan">Tachartasan</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="{{ site.baseurl }}/ceanglaichean">Ceanglaichean</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="https://pinksaltire.com/">Pink Saltire</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="{{ site.baseurl }}/roinn-seorsa/blog">Blog</a>
