--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -7,28 +7,24 @@ layout: page
 {% endunless %}
 
 {% unless site.categories[page.category].size > 0 %}
-  <p>Chan eil post sam bith anns an roinn-seòrsa seo.</p>
+  <p>There is no article in this category.</p>
 {% endunless %}
 
 {% for post in site.categories[page.category] %}
-  <div class="container">
-    <div class="row">
-      <div class="col-md-3">
-        <a href="{{ post.url | prepend: site.baseurl }}"><img src="{{ post.image}}" class="index-image" /></a>
-      </div>
-      <div class="col-md-9">
-        <h4><a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a></h4>
-        {% if post.author %}
-        <p class="text-muted">{{ post.date | date: "%Y-%m-%d" }} le <a href="{{ post.author_url }}">{{ post.author }}</a></p>
-
-        {% else %}
-
-        <p class="text-muted">{{ post.date | date: "%Y-%m-%d" }} le <a href="#">Crìstean MacMhìcheil</a></p>
-
+<div class="post-preview">
+    <a href="{{ post.url | prepend: site.baseurl }}">
+        <h2 class="post-title">
+            {{ post.title }}
+        </h2>
+        {% if post.subtitle %}
+        <h3 class="post-subtitle">
+            {{ post.subtitle }}
+        </h3>
         {% endif %}
-        <p>{{ post.excerpt }}</p>
-      </div>
-    </div>
-  </div>
-  <hr>
+    </a>
+    <p class="post-meta">
+      {{ post.date | date: "%Y-%m-%d" }}
+    </p>
+</div>
+<hr>
 {% endfor %}
