--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,22 +11,7 @@
       {{ page.title }} - {{ site.title }}
       {% endif %}
       </title>
-      <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
-
-
-      <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-      <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-      <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-      <link rel="manifest" href="/site.webmanifest">
-      <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#fb155b">
-      <meta name="apple-mobile-web-app-title" content="Tachartasan.info">
-      <meta name="application-name" content="Tachartasan.info">
-      <meta name="msapplication-TileColor" content="#fb135b">
-      <meta name="msapplication-TileImage" content="/mstile-144x144.png">
-      <meta name="theme-color" content="#fb135b">
-
-
-      <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/naidheachdan-rss.xml" />
+      <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
@@ -45,7 +30,7 @@
     </div>-->
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-light" style="background-color: {{ site.featured-color }}!important">
-      <a href="{{ site.baseurl }}/"><img class="brand-image" src="{{ site.baseurl }}/images/header.png" width="250px"></a>
+      <a href="{{ site.baseurl }}/"><img class="brand-image" src="{{ site.baseurl }}/images/header.png" width="750px"></a>
       <!--<a class="navbar-brand" href="#">Navbar</a>-->
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -60,20 +45,24 @@
           Roinnean-seòrsa
           </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item" href="{{ site.baseurl }}/roinn-seorsa/foghlam">Foghlam</a>
+            <a class="dropdown-item" href="{{ site.baseurl }}/roinn-seorsa/eadar-lion">An t-Eadar-lìon</a>
+            <a class="dropdown-item" href="{{ site.baseurl }}/roinn-seorsa/applaidean">Applaidean</a>
+              <a class="dropdown-item" href="{{ site.baseurl }}/roinn-seorsa/apple">Apple</a>
+              <a class="dropdown-item" href="{{ site.baseurl }}/roinn-seorsa/blog">Blog</a>
+              <a class="dropdown-item" href="{{ site.baseurl }}/roinn-seorsa/gaidhlig">Gàidhlig</a>
+              <a class="dropdown-item" href="{{ site.baseurl }}/roinn-seorsa/google">Google</a>
+              <a class="dropdown-item" href="{{ site.baseurl }}/roinn-seorsa/lcdtq">LCDTQ</a>
+              <a class="dropdown-item" href="{{ site.baseurl }}/roinn-seorsa/microsoft">Microsoft</a>
             </div>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{{ site.baseurl }}/ceanglaichean">Ceanglaichean</a>
+            <a class="nav-link" href="{{ site.baseurl }}/tasglann">Tasglann</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{{ site.baseurl }}/roinn-seorsa/blog">Blog</a>
+            <a class="nav-link" href="{{ site.baseurl }}/lorg">Lorg</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="{{ site.baseurl }}/mu-dheidhinn">Mu Dheidhinn</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{{ site.baseurl }}/lorg"><i class="fas fa-search"></i></a>
           </li>
         </ul>
       </div>
@@ -88,11 +77,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
 
-    <div class="footer">
-      <p>
-        <a href="{{ site.baseurl }}/naidheachdan-rss.xml"><i class="fas fa-rss"></i> Naidheachdan</a> |
-        <a href="{{ site.baseurl }}/tachartasan-rss.xml"><i class="fas fa-rss"></i> Tachartasan</a>
-      </p>
+    <div class="footer fixed-bottom">
       <p><i class="fa fa-code"></i> le <i class="fa fa-heart"></i> le <a href="https//github.com/MacMhicheil/" title="Stòr Github Chrìstein MhicMhìcheil | Chris Mitchell's Github Repository">Crìstean MacMhìcheil</a></p>
     </div>
 
