--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -12,7 +12,29 @@ layout: default
         {% endif %}
 
         {{ content }}
+      </div>
 
+      <div class="related">
+        {% unless page.categories == null %}
+      	  {% capture pageCategory %}{{ page.categories[0] }}{% endcapture %}
+      	  {% unless site.categories[pageCategory].size == 1 %}
+            <h2>Co-cheangailte</h2>
+            <ul class="related-posts">
+              {% for post in site.categories[pageCategory] limit:6 %}
+                {% unless post.title == page.title %}
+                	<li class="related-post">
+      	           	<h4>
+      		            <a class="related-post" href="{{ site.baseurl }}{{ post.url }}">
+      		              {{ post.title }}
+      		              <small>{{ post.date | date: "%Y-%m-%d" }}</small>
+      		            </a>
+      	           	</h4>
+      	          </li>
+                {% endunless %}
+              {% endfor %}
+      	    </ul>
+      	  {% endunless %}
+      	{% endunless %}
       </div>
     </div>
   </div>
