--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -20,74 +20,28 @@ layout: default
 
         {{ content }}
       </div>
-      <hr>
-      <div class="PageNavigation">
-        {% for post in site.categories.naidheachdan %}
-                {% if post.url == page.url %}
-                    {% assign post_index0 = forloop.index0 %}
-                    {% assign post_index1 = forloop.index %}
-                {% endif %}
-            {% endfor %}
-            {% for post in site.categories.naidheachdan %}
-                {% if post_index0 == forloop.index %}
-                    {% assign next_post = post.url %}
-                {% endif %}
-                {% if post_index1 == forloop.index0 %}
-                    {% assign prev_post = post.url %}
-                {% endif %}
-            {% endfor %}
-            {% if prev_post %}
-                <a class="prev" href="{{ prev_post }}"><i class="fas fa-arrow-circle-left"></i> Am post roimhe</a>
-            {% endif %}
-            {% if next_post %}
-                <a class="next" href="{{ next_post }}">An ath phost <i class="fas fa-arrow-circle-right"></i></a>
-            {% endif %}
-      </div>
-      <hr>
+
       <div class="related">
         {% unless page.categories == null %}
       	  {% capture pageCategory %}{{ page.categories[0] }}{% endcapture %}
       	  {% unless site.categories[pageCategory].size == 1 %}
-            <h4>Postaichean Co-cheangailte</h4>
+            <h2>Co-cheangailte</h2>
             <ul class="related-posts">
               {% for post in site.categories[pageCategory] limit:6 %}
                 {% unless post.title == page.title %}
                 	<li class="related-post">
-      	           	<p>
+      	           	<h4>
       		            <a class="related-post" href="{{ site.baseurl }}{{ post.url }}">
-                        {{ post.title }}
+      		              {{ post.title }}
+      		              <small>{{ post.date | date: "%Y-%m-%d" }}</small>
       		            </a>
-      	           	</p>
+      	           	</h4>
       	          </li>
                 {% endunless %}
               {% endfor %}
       	    </ul>
       	  {% endunless %}
       	{% endunless %}
-      </div>
-      <hr>
-      <div class="comments">
-        {% if page.comments %}
-        <div id="disqus_thread"></div>
-          <script>
-            /**
-            *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-            *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
-            /*
-            var disqus_config = function () {
-            this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
-            this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-            };
-            */
-            (function() { // DON'T EDIT BELOW THIS LINE
-            var d = document, s = d.createElement('script');
-            s.src = 'https://geidh-uk.disqus.com/embed.js';
-            s.setAttribute('data-timestamp', +new Date());
-            (d.head || d.body).appendChild(s);
-            })();
-          </script>
-          <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-        {% endif %}
       </div>
     </div>
   </div>
