--- a/style.css
+++ b/style.css
@@ -14,16 +14,7 @@ html {
     height: auto;
 }
 
-.post-image{
-  padding-top: 25px;
-  padding-bottom: 25px;
-}
-
 .index-image{
-  margin: 0 auto;
-  display: block;
-  max-width: 100%;
-  height: auto;
   border: 1px whitesmoke solid;
 }
 
@@ -67,14 +58,22 @@ a{
   margin-right: 8px;
 }
 
-.footer{
-    background-color:  {{ site.featured-color }};
-    color: #fff;
+.post h1{
+  margin-top: 15px;
+  margin-bottom 15px;
+}
+
+.footer {
+    background-color: {{ site.featured-color }};
+    color: #ffffff;
     text-align: center;
     width: 100%;
     margin-top: 100px;
+    height: 60px;
     padding: 5px 0px;
 }
+
+body { padding-bottom: 70px; }
 
 .footer a {
     color: #fff;
@@ -84,72 +83,33 @@ a{
     color: #f3f3f3;
 }
 
-#myBtn {
-  display: none;
-  position: fixed;
-  bottom: 50px;
-  right: 30px;
-  z-index: 99;
-  font-size: 18px;
-  border: 1px solid white;
-  outline: none;
-  background-color: {{ site.featured-color }};
-  color: white;
-  cursor: pointer;
-  padding: 15px;
-  border-radius: 4px;
+.posts > .post {
+  padding-bottom: 2em;
+  border-bottom: 1px solid $lightGray;
 }
 
-#myBtn:hover {
-  background-color: #555;
+.posts > .post:last-child {
+  padding-bottom: 1em;
+  border-bottom: none;
 }
 
-.pagination a, .pagination span {
-    padding: 7px 18px;
-    border: 1px solid #eee;
-    margin-left: -2px;
-    margin-right: -2px;
-    background-color: #ffffff;
-    display: inline-block;
+.post {
+  blockquote {
+    margin: 1.8em .8em;
+    border-left: 2px solid $gray;
+    padding: 0.1em 1em;
+    color: $gray;
+    font-size: 22px;
+    font-style: italic;
   }
 
-.pagination a {
-    &:hover {
-        background-color: #f1f1f1;
-        color: #333;
-    }
- }
+  .comments {
+    margin-top: 10px;
+  }
 
-.pagination {
-    text-align: center;
- }
-
-.related{
-  margin-top: 25px;
-}
-
-.post-title{
-  margin: 10px 0px;
-}
-
-.event-list-month{
-  margin: 25px 0px;
-}
-
-.PageNavigation {
-  font-size: 14px;
-  display: block;
-  width: auto;
-  overflow: hidden;
-}
-
-.PageNavigation a {
-  display: block;
-  width: 50%;
-  float: left;
-  margin: 1em 0;
-}
-
-.PageNavigation .next {
-  text-align: right;
+  .read-more {
+    text-transform: uppercase;
+    font-size: 15px;
+    color: #556b2f;
+  }
 }
