--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,14 +45,12 @@
           Roinnean-seòrsa
           </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item" href="{{ site.baseurl }}/roinn-seorsa/eadar-lion">An t-Eadar-lìon</a>
-            <a class="dropdown-item" href="{{ site.baseurl }}/roinn-seorsa/applaidean">Applaidean</a>
-              <a class="dropdown-item" href="{{ site.baseurl }}/roinn-seorsa/apple">Apple</a>
-              <a class="dropdown-item" href="{{ site.baseurl }}/roinn-seorsa/blog">Blog</a>
-              <a class="dropdown-item" href="{{ site.baseurl }}/roinn-seorsa/gaidhlig">Gàidhlig</a>
-              <a class="dropdown-item" href="{{ site.baseurl }}/roinn-seorsa/google">Google</a>
-              <a class="dropdown-item" href="{{ site.baseurl }}/roinn-seorsa/lcdtq">LCDTQ</a>
-              <a class="dropdown-item" href="{{ site.baseurl }}/roinn-seorsa/microsoft">Microsoft</a>
+            <a class="dropdown-item" href="{{ site.baseurl }}/roinn-seorsa/buidhnean-soisealta">Buidhnean Sòisealta</a>
+            <a class="dropdown-item" href="{{ site.baseurl }}/roinn-seorsa/ceol">Ceòl</a>
+            <a class="dropdown-item" href="{{ site.baseurl }}/roinn-seorsa/feisean">Fèisean</a>
+            <a class="dropdown-item" href="{{ site.baseurl }}/roinn-seorsa/feisean-proise">Fèisean-pròise</a>
+            <a class="dropdown-item" href="{{ site.baseurl }}/roinn-seorsa/foghlam">Foghlam</a>
+            <a class="dropdown-item" href="{{ site.baseurl }}/roinn-seorsa/oigridh">Òigridh</a>
             </div>
           </li>
           <li class="nav-item">
