--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -54,7 +54,7 @@
             </div>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{{ site.baseurl }}/tasglann">Tasglann</a>
+            <a class="nav-link" href="{{ site.baseurl }}/blog">blog</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="{{ site.baseurl }}/lorg">Lorg</a>
