--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,12 +45,12 @@
           Roinnean-seòrsa
           </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item" href="{{ site.baseurl }}/roinn-seorsa/buidhnean-soisealta">Buidhnean Sòisealta</a>
-            <a class="dropdown-item" href="{{ site.baseurl }}/roinn-seorsa/ceol">Ceòl</a>
-            <a class="dropdown-item" href="{{ site.baseurl }}/roinn-seorsa/feisean">Fèisean</a>
-            <a class="dropdown-item" href="{{ site.baseurl }}/roinn-seorsa/feisean-proise">Fèisean-pròise</a>
-            <a class="dropdown-item" href="{{ site.baseurl }}/roinn-seorsa/foghlam">Foghlam</a>
-            <a class="dropdown-item" href="{{ site.baseurl }}/roinn-seorsa/oigridh">Òigridh</a>
+            <a class="dropdown-item" href="{{ site.baseurl }}/buidhnean-soisealta">Buidhnean Sòisealta</a>
+            <a class="dropdown-item" href="{{ site.baseurl }}/ceol">Ceòl</a>
+            <a class="dropdown-item" href="{{ site.baseurl }}/feisean">Fèisean</a>
+            <a class="dropdown-item" href="{{ site.baseurl }}/feisean-proise">Fèisean-pròise</a>
+            <a class="dropdown-item" href="{{ site.baseurl }}/foghlam">Foghlam</a>
+            <a class="dropdown-item" href="{{ site.baseurl }}/oigridh">Òigridh</a>
             </div>
           </li>
           <li class="nav-item">
