--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -54,6 +54,9 @@
             </div>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="{{ site.baseurl }}/cuir-fios"><i class="fa fa-plus"></i> Tachartas</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="{{ site.baseurl }}/blog">Blog</a>
           </li>
           <li class="nav-item">
