--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,11 +38,11 @@
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav navbar-center">
           <li class="nav-item">
-            <a class="nav-link" href="{{ site.baseurl }}/"><i class="fa fa-home"></i> Dachaigh</a>
+            <a class="nav-link" href="{{ site.baseurl }}/">Dachaigh</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          <i class="fa fa-tag"></i> Roinnean-seòrsa
+          Roinnean-seòrsa
           </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
             <a class="dropdown-item" href="{{ site.baseurl }}/buidhnean-soisealta">Buidhnean Sòisealta</a>
@@ -54,16 +54,16 @@
             </div>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{{ site.baseurl }}/cuir-fios"><i class="fa fa-plus"></i> Tachartas</a>
+            <a class="nav-link" href="{{ site.baseurl }}/cuir-fios">Cuir Tachartas Ris</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{{ site.baseurl }}/blog"><i class="fa fa-pen"></i> Blog</a>
+            <a class="nav-link" href="{{ site.baseurl }}/blog">Blog</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{{ site.baseurl }}/lorg"><i class="fa fa-search"></i> Lorg</a>
+            <a class="nav-link" href="{{ site.baseurl }}/lorg">Lorg</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{{ site.baseurl }}/mu-dheidhinn"><i class="fa fa-info"></i> Mu Dheidhinn</a>
+            <a class="nav-link" href="{{ site.baseurl }}/mu-dheidhinn">Mu Dheidhinn</a>
           </li>
         </ul>
       </div>
