--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,7 +50,7 @@
             <a class="dropdown-item" href="{{ site.baseurl }}/feisean">Fèisean</a>
             <a class="dropdown-item" href="{{ site.baseurl }}/feisean-proise">Fèisean-pròise</a>
             <a class="dropdown-item" href="{{ site.baseurl }}/foghlam">Foghlam</a>
-            <a class="dropdown-item" href="{{ site.baseurl }}/leabraichean">Leabraichean/a>
+            <a class="dropdown-item" href="{{ site.baseurl }}/leabraichean">Leabraichean</a>
             <a class="dropdown-item" href="{{ site.baseurl }}/oigridh">Òigridh</a>
             </div>
           </li>
