--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -19,6 +19,26 @@ layout: default
           <img src="{{ page.image }}" class="post-image">
 
         {{ content }}
+
+        <h4>Cùin</h4>
+        <p>{{ page.ceann-latha }}</p>
+
+        <h4>Càit</h4>
+        <p>{{ page.seoladh }}</p>
+
+        <p>Airson barrachd fhiosrachaidh mun tachartas seo tadhalaibh air:</p>
+          {% if page.larach-lin %}
+            <a href="{{page.larach-lin}}" target="_blank" rel="noopener"><button type="button" class="btn btn-primary more-info" style="background-color: #fb135b !important; border-style: none; width: 30%;"><i class="fas fa-home"></i></button></a>
+
+          {% endif %}
+          {% if page.twitter %}
+            <a href="{{page.twitter}}" target="_blank" rel="noopener"><button type="button" class="btn btn-primary" style="background-color: #fb135b !important; border-style: none; width: 30%;"><i class="fab fa-twitter"></i></button></a>
+
+          {% endif %}
+          {% if page.facebook %}
+            <a href="{{page.facebook}}" target="_blank" rel="noopener"><button type="button" class="btn btn-primary" style="background-color: #fb135b !important; border-style: none; width: 30%;"><i class="fab fa-facebook-f"></i></button></a>
+          {% endif %}
+
       </div>
 
       <div class="related">
