--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -15,7 +15,7 @@ layout: page
   <div class="container">
     <div class="row">
       <div class="col-3">
-        <a href="{{ site.baseurl }}{{ post.url }}"><img src="{{ post.image }}" class="post-image index-image"></a>
+        <a href="{{ site.baseurl }}{{ post.url }}"><img src="{{ post.image }}" class="index-image"></a>
       </div>
       <div class="col-9">
         <h4 class="post-title"><a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a></h4>
