--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -80,7 +80,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
 
     <div class="footer">
-      <p><i class="fa fa-code"></i> le <i class="fa fa-heart"></i> le <a href="https//github.com/MacMhicheil/" title="Stòr Github Chrìstein MhicMhìcheil | Chris Mitchell's Github Repository">Crìstean MacMhìcheil</a></p>
+      <p><i class="fa fa-code"></i> le <i class="fa fa-heart"></i> le <a href="https://github.com/tachartasan/tachartasan.github.io" title="Stòr Github Chrìstein MhicMhìcheil | Chris Mitchell's Github Repository">Crìstean MacMhìcheil</a></p>
     </div>
 
   </body>
