--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,6 +45,7 @@
           Roinnean-seòrsa
           </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+            <a class="dropdown-item" href="{{ site.baseurl }}/biadh">Biadh</a>
             <a class="dropdown-item" href="{{ site.baseurl }}/buidhnean-soisealta">Buidhnean Sòisealta</a>
             <a class="dropdown-item" href="{{ site.baseurl }}/ceol">Ceòl</a>
             <a class="dropdown-item" href="{{ site.baseurl }}/feisean">Fèisean</a>
